# Model_Risk_Manager

./: MERGE.md  README.md  pyproject.toml  vercel.json
api/: app_rag.py  rag_system.py  requirements.txt
docs/: README.md  sample_mrm_guidelines.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/pdf-chat/: page.tsx
