[project]
name = "beyond-chatgpt"
version = "0.1.0"
description = "gpt-like-a-dev"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "jupyter>=1.1.1",
    "openai",
    "pydantic>=2.11.4",
    "uvicorn>=0.34.2",
    "PyPDF2>=3.0.1",
    "numpy>=1.24.3",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.18",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.2.0",
    "pymupdf>=1.24.0",
    "qdrant-client>=1.9.0",
    "tiktoken>=0.7.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "chromadb>=0.4.0",
]
